using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;


public static class AnimationConstants
{
    public const string PLAYER_RUN = "Running";
    public const string PLAYER_JUMP = "Jumping";
    public const string PLAYER_FALL = "Falling";
    public const string SPIDER_ATTACK = "Attacking";
}

